Native/Test/KL/empty-return-withing-function-returning-value.kl
/*
 *  Copyright 2010-2012 Fabric Engine Inc. All rights reserved.
 */

function Integer foo()
{
  return;
}
